--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,7 +8,7 @@
 
 
 body{
-	font-family: 'Lato', sans-serif;
+	font-family: inherit;
 	background-image: linear-gradient(to right,rgba(0,0,0,0.6),rgba(0,0,0,0.6)), url("../Images/background.jpg");
 	background-size: cover;
 	background-attachment: fixed;
